[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/body/female_body.png" type="Texture" id=1]
[ext_resource path="res://Body.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.8245
height = 32.3909

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0769
height = 44.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.5, 19.25 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 12.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.2703
height = 29.1875

[sub_resource type="CapsuleShape2D" id=7]
radius = 10.9508

[sub_resource type="CapsuleShape2D" id=8]
radius = 17.0
height = 224.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 16.0
height = 220.0

[sub_resource type="CapsuleShape2D" id=10]
height = 213.082

[sub_resource type="CapsuleShape2D" id=11]
radius = 10.5262
height = 207.781

[sub_resource type="CircleShape2D" id=12]
radius = 25.02

[node name="FemaleBody" type="Node2D"]
script = ExtResource( 2 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 528, 292 )
scale = Vector2( 0.65106, 0.65106 )
texture = ExtResource( 1 )

[node name="LeftLungArea" type="Area2D" parent="."]
position = Vector2( 40, 146 )

[node name="LeftLungColisionShape" type="CollisionShape2D" parent="LeftLungArea"]
position = Vector2( 469, -6 )
rotation = 0.242298
shape = SubResource( 1 )

[node name="RightLungArea" type="Area2D" parent="."]
position = Vector2( 40, 145 )

[node name="RightLungCollisionShape" type="CollisionShape2D" parent="RightLungArea"]
position = Vector2( 513, -5 )
rotation = 2.81423
shape = SubResource( 2 )

[node name="InstestinesArea" type="Area2D" parent="."]

[node name="IntestinesCollisionShape" type="CollisionShape2D" parent="InstestinesArea"]
position = Vector2( 528.5, 243.75 )
shape = SubResource( 3 )

[node name="UterusArea" type="Area2D" parent="."]

[node name="UterusCollisionShape" type="CollisionShape2D" parent="UterusArea"]
position = Vector2( 529, 294 )
shape = SubResource( 4 )

[node name="UterusCollisionShape2" type="CollisionShape2D" parent="UterusArea"]
position = Vector2( 550, 276 )
shape = SubResource( 5 )

[node name="UterusCollisionShape4" type="CollisionShape2D" parent="UterusArea"]
position = Vector2( 529, 275 )
shape = SubResource( 5 )

[node name="UterusCollisionShape3" type="CollisionShape2D" parent="UterusArea"]
position = Vector2( 508, 276 )
shape = SubResource( 5 )

[node name="LiverArea" type="Area2D" parent="."]

[node name="LiverCollisionShape" type="CollisionShape2D" parent="LiverArea"]
position = Vector2( 516, 184 )
rotation = 1.12269
shape = SubResource( 6 )

[node name="StomachArea" type="Area2D" parent="."]

[node name="StomachCollisionShape2D" type="CollisionShape2D" parent="StomachArea"]
position = Vector2( 545, 197 )
rotation = 0.672609
shape = SubResource( 7 )

[node name="SkinArea" type="Area2D" parent="."]

[node name="SkinCollisionShape2D" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 499, 440 )
shape = SubResource( 8 )

[node name="SkinCollisionShape2D2" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 560, 442 )
shape = SubResource( 9 )

[node name="SkinCollisionShape2D3" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 464, 223 )
rotation = 0.181346
shape = SubResource( 10 )

[node name="SkinCollisionShape2D4" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 595, 222 )
rotation = 6.13699
shape = SubResource( 11 )

[node name="SkinCollisionShape2D5" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 498, 316 )
shape = SubResource( 12 )

[node name="SkinCollisionShape2D6" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 561, 315 )
shape = SubResource( 12 )

[connection signal="input_event" from="LeftLungArea" to="." method="_on_LeftLungArea_input_event"]
[connection signal="input_event" from="RightLungArea" to="." method="_on_RightLungArea_input_event"]
[connection signal="input_event" from="InstestinesArea" to="." method="_on_InstestinesArea_input_event"]
[connection signal="input_event" from="UterusArea" to="." method="_on_UterusArea_input_event"]
[connection signal="input_event" from="LiverArea" to="." method="_on_LiverArea_input_event"]
[connection signal="input_event" from="StomachArea" to="." method="_on_StomachArea_input_event"]
[connection signal="input_event" from="SkinArea" to="." method="_on_SkinArea_input_event"]
